# pio-hand-classifier

./: .gitignore  CMakeLists.txt  README.md  handClassifier.sh
R/: combine_csv.r
src/: HandClassifier.cpp  HandClassifier.h  main.cpp
tst/: Hand_Classifier_Tests.cpp  catch.hpp
